# soundcloud-ingestion-cronjob

./: .gitignore  Dockerfile  README.md  docker.md  main.py  migrate_state.py  pyproject.toml  requirements.txt  sc_ingest.py  stateManager.py
k8s/: config.yaml  copy-db-pod.yaml  cronjob.yaml
